# cpp-pybind-example

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  requirements.txt
cmake/: InitExecutable.cmake  websocketppConfig.cmake
py/: md_writer_impl.py  py_invoke_cpp.py
src/app_executor/: CMakeLists.txt
src/app_executor/executor/: main.cpp  md_writer.cpp  md_writer.h  py_binding.cpp  py_md_writer.cpp  py_md_writer.h
src/lib_cme_hooks/: CMakeLists.txt
src/lib_cme_hooks/cme_hooks/: cme_hooks.cpp  cme_hooks.h
